# gemini

./: Cargo.toml  README.md  fix_nix.fish  set_logs.fish
src/: client.rs  errors.rs  handlers.rs  lib.rs  models.rs
