[package]
name = "gemini"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gemini"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
colored = "3.0.0"
crossterm = "0.28.1"
env_logger = "0.11.7"
log = "0.4.27"
native-tls = "0.2.14"
once_cell = "1.21.1"
ring = "0.16.20"
rpassword = "7.4.0"
rustls = "0.20.0"
rustyline = "15.0.0"
thiserror = "2.0.12"
url = "2.5.4"
